@@ -1,3 +1,8 @@
+2006-01-17  Arnold Metselaar  <arnoldm@sourceware.org>
+
+	* z80-dis.c (struct buffer, prt_d, prt_d_n, pref_xd_cb): Use
+	unsigned char to hold data to be disassembled.
+
 2006-01-17  Andreas Schwab  <schwab@suse.de>
 
 	PR binutils/1486
